--- a/W1/Homework_w1.rmd
+++ b/W1/Homework_w1.rmd
@@ -7,6 +7,298 @@ output: html_document
 
 # The Analytics Edge Week 1
 
+Let's start by emptying the workspace:
+```{r}
+rm (list = ls(all=T))
+
+``` 
+
+## Assignment I An Analytical Detective
+
+Crime is an international concern, but it is documented and handled in very different ways in different countries. In the United States, violent crimes and property crimes are recorded by the Federal Bureau of Investigation (FBI).  Additionally, each city documents crime, and some cities release data regarding crime rates. The city of Chicago, Illinois releases crime data from 2001 onward online.
+
+Chicago is the third most populous city in the United States, with a population of over 2.7 million people. The city of Chicago is shown in the map below, with the state of Illinois highlighted in red. 
+
+There are two main types of crimes: violent crimes, and property crimes. In this problem, we'll focus on one specific type of property crime, called "motor vehicle theft" (sometimes referred to as grand theft auto). This is the act of stealing, or attempting to steal, a car. In this problem, we'll use some basic data analysis in R to understand the motor vehicle thefts in Chicago. 
+
+Please download the file mvtWeek1.csv for this problem (do not open this file in any spreadsheet software before completing this problem because it might change the format of the Date field). Here is a list of descriptions of the variables:
+
+ID: a unique identifier for each observation
+Date: the date the crime occurred
+LocationDescription: the location where the crime occurred
+Arrest: whether or not an arrest was made for the crime (TRUE if an arrest was made, and FALSE if an arrest was not made)
+Domestic: whether or not the crime was a domestic crime, meaning that it was committed against a family member (TRUE if it was domestic, and FALSE if it was not domestic)
+Beat: the area, or "beat" in which the crime occurred. This is the smallest regional division defined by the Chicago police department.
+District: the police district in which the crime occured. Each district is composed of many beats, and are defined by the Chicago Police Department.
+CommunityArea: the community area in which the crime occurred. Since the 1920s, Chicago has been divided into what are called "community areas", of which there are now 77. The community areas were devised in an attempt to create socially homogeneous regions.
+Year: the year in which the crime occurred.
+Latitude: the latitude of the location at which the crime occurred.
+Longitude: the longitude of the location at which the crime occurred.
+
+### Problem 1.1 - Loading the Data
+
+Read the dataset mvtWeek1.csv into R, using the read.csv function, and call the data frame "mvt". Remember to navigate to the directory on your computer containing the file mvtWeek1.csv first. It may take a few minutes to read in the data, since it is pretty large. Then, use the str and summary functions to answer the following questions.
+
+### Problem 1.2 - Loading the Data
+1 point possible (graded)
+How many variables are in this dataset?
+```{r}
+mvt = read.csv("mvtWeek1.csv")
+str(mvt)
+summary(mvt)
+```
+
+### Problem 1.3 - Loading the Data
+1 point possible (graded)
+Using the "max" function, what is the maximum value of the variable "ID"?
+
+### Problem 1.4 - Loading the Data
+1 point possible (graded)
+What is the minimum value of the variable "Beat"?
+```{r}
+max(mvt$ID)
+min(mvt$Beat)
+```
+
+
+
+
+###Problem 1.5 - Loading the Data
+1 point possible (graded)
+How many observations have value TRUE in the Arrest variable (this is the number of crimes for which an arrest was made
+
+
+###Problem 1.6 - Loading the Data
+1 point possible (graded)
+How many observations have a LocationDescription value of ALLEY?
+
+```{r}
+str(mvt)
+summary(mvt)
+```
+
+
+###Problem 2.1 - Understanding Dates in R
+In many datasets, like this one, you have a date field. Unfortunately, R does not automatically recognize entries that look like dates. We need to use a function in R to extract the date and time. Take a look at the first entry of Date (remember to use square brackets when looking at a certain entry of a variable).
+
+In what format are the entries in the variable Date?
+
+```{r}
+sample(mvt$Date, 100)
+```
+
+
+###Problem 2.2 - Understanding Dates in R
+1 point possible (graded)
+Now, let's convert these characters into a Date object in R. In your R console, type
+
+DateConvert = as.Date(strptime(mvt$Date, "%m/%d/%y %H:%M"))
+
+This converts the variable "Date" into a Date object in R. Take a look at the variable DateConvert using the summary function.
+
+What is the month and year of the median date in our dataset? Enter your answer as "Month Year", without the quotes. (Ex: if the answer was 2008-03-28, you would give the answer "March 2008", without the quotes.)
+
+
+
+```{r}
+DateConvert = as.Date(strptime(mvt$Date, "%m/%d/%y %H:%M"))
+str(DateConvert)
+summary(DateConvert)
+```
+
+
+###Problem 2.3 - Understanding Dates in R
+1 point possible (graded)
+Now, let's extract the month and the day of the week, and add these variables to our data frame mvt. We can do this with two simple functions. Type the following commands in R:
+
+```{r}
+mvt$Month = months(DateConvert)
+
+mvt$Weekday = weekdays(DateConvert)
+```
+
+
+This creates two new variables in our data frame, Month and Weekday, and sets them equal to the month and weekday values that we can extract from the Date object. Lastly, replace the old Date variable with DateConvert by typing:
+
+
+```{r}
+mvt$Date = DateConvert
+```
+
+Using the table command, answer the following questions.
+
+In which month did the fewest motor vehicle thefts occur?
+
+###Problem 2.4 - Understanding Dates in R
+1 point possible (graded)
+On which weekday did the most motor vehicle thefts occur?
+
+###Problem 2.5 - Understanding Dates in R
+1 point possible (graded)
+Each observation in the dataset represents a motor vehicle theft, and the Arrest variable indicates whether an arrest was later made for this theft. Which month has the largest number of motor vehicle thefts for which an arrest was made?
+
+
+```{r}
+which.min(table(mvt$Month))
+which.max(table(mvt$Weekday))
+sort((table(mvt$Month, mvt$Arrest)[,2]))
+
+```
+
+###Problem 3.1 - Visualizing Crime Trends
+3 points possible (graded)
+Now, let's make some plots to help us better understand how crime has changed over time in Chicago. Throughout this problem, and in general, you can save your plot to a file. For more information, this website very clearly explains the process.
+
+First, let's make a histogram of the variable Date. We'll add an extra argument, to specify the number of bars we want in our histogram. In your R console, type
+
+hist(mvt$Date, breaks=100)
+
+Looking at the histogram, answer the following questions.
+
+In general, does it look like crime increases or decreases from 2002 - 2012?
+
+In general, does it look like crime increases or decreases from 2005 - 2008?
+
+
+```{r}
+hist(mvt$Date, breaks=100)
+
+```
+
+
+
+###Problem 3.2 - Visualizing Crime Trends
+1/1 point (graded)
+Now, let's see how arrests have changed over time. Create a boxplot of the variable "Date", sorted by the variable "Arrest" (if you are not familiar with boxplots and would like to learn more, check out this tutorial). In a boxplot, the bold horizontal line is the median value of the data, the box shows the range of values between the first quartile and third quartile, and the whiskers (the dotted lines extending outside the box) show the minimum and maximum values, excluding any outliers (which are plotted as circles). Outliers are defined by first computing the difference between the first and third quartile values, or the height of the box. This number is called the Inter-Quartile Range (IQR). Any point that is greater than the third quartile plus the IQR or less than the first quartile minus the IQR is considered an outlier.
+
+Does it look like there were more crimes for which arrests were made in the first half of the time period or the second half of the time period? (Note that the time period is from 2001 to 2012, so the middle of the time period is the beginning of 2007.)
+
+```{r}
+boxplot(mvt$Date[mvt$Arrest==1])
+```
+
+
+###Problem 3.3 - Visualizing Crime Trends
+2.0 points possible (graded)
+Let's investigate this further. Use the table function for the next few questions.
+
+For what proportion of motor vehicle thefts in 2001 was an arrest made?
+
+Note: in this question and many others in the course, we are asking for an answer as a proportion. Therefore, your answer should take a value between 0 and 1.
+
+
+###Problem 3.4 - Visualizing Crime Trends
+1 point possible (graded)
+For what proportion of motor vehicle thefts in 2007 was an arrest made?
+
+###Problem 3.5 - Visualizing Crime Trends
+1 point possible (graded)
+For what proportion of motor vehicle thefts in 2012 was an arrest made?
+
+
+
+Since there may still be open investigations for recent crimes, this could explain the trend we are seeing in the data. There could also be other factors at play, and this trend should be investigated further. However, since we don't know when the arrests were actually made, our detective work in this area has reached a dead end.
+```{r}
+
+
+
+#2001 arrest proportion
+prop.table(table(mvt$Arrest[mvt$Year == "2001"]))
+
+#2007 arrest proportion
+prop.table(table(mvt$Arrest[mvt$Year == "2007"]))
+
+#2012 arrest proportion
+prop.table(table(mvt$Arrest[mvt$Year == "2012"]))
+
+```
+
+###Problem 4.1 - Popular Locations
+
+Analyzing this data could be useful to the Chicago Police Department when deciding where to allocate resources. If they want to increase the number of arrests that are made for motor vehicle thefts, where should they focus their efforts?
+
+We want to find the top five locations where motor vehicle thefts occur. If you create a table of the LocationDescription variable, it is unfortunately very hard to read since there are 78 different locations in the data set. By using the sort function, we can view this same table, but sorted by the number of observations in each category. In your R console, type:
+
+sort(table(mvt$LocationDescription))
+
+Which locations are the top five locations for motor vehicle thefts, excluding the "Other" category? You should select 5 of the following options.
+
+
+
+```{r}
+#Popular locations
+sort(table(mvt$LocationDescription), decreasing = T)
+```
+
+###Problem 4.2 - Popular Locations
+1 point possible (graded)
+Create a subset of your data, only taking observations for which the theft happened in one of these five locations, and call this new data set "Top5". To do this, you can use the | symbol. In lecture, we used the & symbol to use two criteria to make a subset of the data. To only take observations that have a certain value in one variable or the other, the | character can be used in place of the & symbol. This is also called a logical "or" operation.
+
+Alternately, you could create five different subsets, and then merge them together into one data frame using rbind.
+
+How many observations are in Top5?
+
+
+```{r}
+
+#Top5 locations
+Top5 = subset(mvt, LocationDescription == "STREET" | LocationDescription == "PARKING LOT/GARAGE(NON.RESID.)" | LocationDescription == "ALLEY"| LocationDescription == "GAS STATION" | LocationDescription == "DRIVEWAY - RESIDENTIAL")
+str(Top5)
+
+
+
+```
+
+###Problem 4.3 - Popular Locations
+2.0 points possible (graded)
+R will remember the other categories of the LocationDescription variable from the original dataset, so running table(Top5$LocationDescription) will have a lot of unnecessary output. To make our tables a bit nicer to read, we can refresh this factor variable. In your R console, type:
+
+```{r}
+Top5$LocationDescription = factor(Top5$LocationDescription)
+
+```
+
+If you run the str or table function on Top5 now, you should see that LocationDescription now only has 5 values, as we expect.
+```{r}
+str(Top5)
+```
+
+
+Use the Top5 data frame to answer the remaining questions.
+
+One of the locations has a much higher arrest rate than the other locations. Which is it? Please enter the text in exactly the same way as how it looks in the answer options for Problem 4.1.
+
+```{r}
+require(data.table)
+TopDT <- data.table(Top5)
+TopDT[, .(Amount = .N), .(LocationDescription, Arrest)][, .(Amount/sum(Amount), Arrest), .(LocationDescription)][order(-Arrest, -V1)]
+
+
+
+```
+
+###Problem 4.4 - Popular Locations
+1 point possible (graded)
+On which day of the week do the most motor vehicle thefts at gas stations happen?
+```{r}
+TopDT[LocationDescription == "GAS STATION", .N, Weekday][order(-N)]
+```
+
+###Problem 4.5 - Popular Locations
+1 point possible (graded)
+On which day of the week do the fewest motor vehicle thefts in residential driveways happen?
+
+```{r}
+TopDT[LocationDescription == "DRIVEWAY - RESIDENTIAL", .N, Weekday][order(N)]
+```
+
+
+
+
+
+
+
+How many rows of data (observations) are in this dataset?
 ## Assignment II STOCK DYNAMICS
 
 A stock market is where buyers and sellers trade shares of a company, and is one of the most popular ways for individuals and companies to invest money. The size of the world stock market  is now estimated to be in the trillions. The largest stock market in the world is the New York Stock Exchange (NYSE), located in New York City. About 2,800 companies are listed on the NSYE. In this problem, we'll look at the monthly stock prices of five of these companies: IBM, General Electric (GE), Procter and Gamble, Coca Cola, and Boeing. The data used in this problem comes from Infochimps.
@@ -19,11 +311,7 @@ Date: the date of the stock price, always given as the first of the month.
 StockPrice: the average stock price of the company in the given month.
 In this problem, we'll take a look at how the stock dynamics of these companies have changed over time.
 
-Let's start by emptying the workspace:
-```{r}
-rm (list = ls(all=T))
 
-``` 
 
 ```{r}
 
@@ -173,7 +461,7 @@ Which stock fell the most right after the technology bubble burst in March 2000?
 
 ```{r}
 
-library(ggplot2)
+require(ggplot2)
 ggplot(data = CocaCola, aes(x = Date, y = StockPrice)) + geom_line(data = CocaCola[301:432,], aes (colour = "CocaCola")) + geom_line(data = ProcterGamble[301:432,], aes (colour = "ProcterGamble")) + geom_line(data = GE[301:432,], aes (colour = "GE")) + geom_line(data = IBM[301:432,], aes (colour = "IBM")) + geom_line(data = Boeing[301:432,], aes (colour = "Boeing")) + scale_color_manual("",breaks = c("CocaCola","ProcterGamble","GE","IBM","Boeing"), values = c("blue", "red","green","skyblue","tan")) + geom_vline(xintercept = as.numeric(as.Date("2000-03-15")))
 
 ```
@@ -185,11 +473,8 @@ Which stock reaches the highest value in the time period 1995-2005?
 
 ```{r}
 
-library(ggplot2)
-ggplot(data = CocaCola, aes(x = Date, y = StockPrice)) + geom_line(data = CocaCola[301:432,], aes (colour = "CocaCola")) + geom_line(data = ProcterGamble[301:432,], aes (colour = "ProcterGamble")) + geom_line(data = GE[301:432,], aes (colour = "GE")) + geom_line(data = IBM[301:432,], aes (colour = "IBM")) + geom_line(data = Boeing[301:432,], aes (colour = "Boeing")) + scale_color_manual("",breaks = c("CocaCola","ProcterGamble","GE","IBM","Boeing"), values = c("blue", "red","green","skyblue","tan")) + geom_vline(xintercept = as.numeric(as.Date("1997-10-01")))
+ggplot(data = CocaCola, aes(x = Date, y = StockPrice)) + geom_line(data = CocaCola[301:432,], aes (colour = "CocaCola")) + geom_line(data = ProcterGamble[301:432,], aes (colour = "ProcterGamble")) + geom_line(data = GE[301:432,], aes (colour = "GE")) + geom_line(data = IBM[301:432,], aes (colour = "IBM")) + geom_line(data = Boeing[301:432,], aes (colour = "Boeing")) + scale_color_manual("",breaks = c("CocaCola","ProcterGamble","GE","IBM","Boeing"), values = c("blue", "red","green","skyblue","tan")) + geom_vline(xintercept = as.numeric(as.Date("1997-09-01"))) + geom_vline(xintercept = as.numeric(as.Date("1997-11-30")))
 ```
-
-In the last two years of this time period (2004 and 2005) which stock seems to be performing the best, in terms of increasing stock price?
 
 
 ### Problem 3.3 - Visualizing Stock Dynamics 1995-2005
@@ -203,7 +488,7 @@ ggplot(data = CocaCola, aes(x = Date, y = StockPrice)) + geom_line(data = CocaCo
 
 
 ### Problem 3.4 - Visualizing Stock Dynamics 1995-2005
-
+ry
 
 In the last two years of this time period (2004 and 2005) which stock seems to be performing the best, in terms of increasing stock price?
 
@@ -230,12 +515,16 @@ monthPriceIBM[monthPriceIBM>1]
 ```
 
 
-Problem 4.2 - Monthly Trends
+###Problem 4.2 - Monthly Trends
 
 (1 point possible)
 Repeat the tapply function from the previous problem for each of the other four companies, and use the output to answer the remaining questions.
 
 General Electric and Coca-Cola both have their highest average stock price in the same month. Which month is this?
+
+###Problem 4.3 - Monthly Trends
+1 point possible (graded)
+For the months of December and January, every company's average stock is higher in one month and lower in the other. In which month are the stock prices lower?
 ```{r}
 monthPriceGE <- tapply(GE$StockPrice, months(GE$Date), mean)/mean((GE$StockPrice))
 monthPriceGE
@@ -246,10 +535,6 @@ monthPriceCocaCola
 monthPriceCocaCola[which.max(monthPriceCocaCola)]
 
 ```
-
-
-
-
 
 
 
@@ -358,14 +643,25 @@ table(CPS$Race[(CPS$Hispanic) == 1])
 Which variables have at least one interviewee with a missing (NA) value? (Select all that apply.)
 ```{r}
 apply(CPS, 2, anyNA)
-
+?apply
 ```
 
 
 Problem 2.2 - Evaluating Missing Values
 
 (1 point possible)
-Often when evaluating a new dataset, we try to identify if there is a pattern in the missing values in the dataset. We will try to determine if there is a pattern in the missing values of the Married variable. The function is.na(CPS$Married) returns a vector of TRUE/FALSE values for whether the Married variable is missing. We can see the breakdown of whether Married is missing based on the reported value of the Region variable with the function table(CPS$Region, is.na(CPS$Married)). Which is the most accurate:
+Often when evaluating a new dataset, we try to identify if there is a pattern in the missing values in the dataset. We will try to determine if there is a pattern in the missing values of the Married variable. The function 
+```{r}
+is.na(CPS$Married)
+```
+returns a vector of TRUE/FALSE values for whether the Married variable is missing. We can see the breakdown of whether Married is missing based on the reported value of the Region variable with the function
+```{r}
+table(CPS$Region, is.na(CPS$Married))
+```
+
+Which is the most accurate:
+
+
 
 ```{r}
 table(CPS$Region, is.na(CPS$Married))
@@ -460,5 +756,71 @@ Which metropolitan area has the highest proportion of interviewees of Hispanic e
 
 ```{r}
 sort(tapply(CPS$Hispanic, CPS$MetroArea, mean), decreasing = T)[1]
-
 ```
+
+###Problem 3.5 - Integrating Metropolitan Area Data
+2.0 points possible (graded)
+Remembering that CPS$Race == "Asian" returns a TRUE/FALSE vector of whether an interviewee is Asian, determine the number of metropolitan areas in the United States from which at least 20% of interviewees are Asian.
+
+```{r}
+sort(tapply(CPS$Race=="Asian", CPS$MetroArea, mean, na.rm=T))
+```
+
+
+
+###Problem 3.6 - Integrating Metropolitan Area Data
+
+Normally, we would look at the sorted proportion of interviewees from each metropolitan area who have not received a high school diploma with the command:
+
+```{r}
+sort(tapply(CPS$Education == "No high school diploma", CPS$MetroArea, mean))
+```
+
+
+However, none of the interviewees aged 14 and younger have an education value reported, so the mean value is reported as NA for each metropolitan area. To get mean (and related functions, like sum) to ignore missing values, you can pass the parameter na.rm=TRUE. Passing na.rm=TRUE to the tapply function, determine which metropolitan area has the smallest proportion of interviewees who have received no high school diploma.
+
+```{r}
+sort(tapply(CPS$Education == "No high school diploma", CPS$MetroArea, mean, na.rm = T))
+```
+
+###Problem 4.1 - Integrating Country of Birth Data
+
+Just as we did with the metropolitan area information, merge in the country of birth information from the CountryMap data frame, replacing the CPS data frame with the result. If you accidentally overwrite CPS with the wrong values, remember that you can restore it by re-loading the data frame from CPSData.csv and then merging in the metropolitan area information using the command provided in the previous subproblem.
+
+What is the name of the variable added to the CPS data frame by this merge operation?
+
+How many interviewees have a missing value for the new country of birth variable?
+
+```{r}
+str(CPS)
+str(CountryMap)
+summary(CPS)
+CPS = merge(CPS, CountryMap, by.x="CountryOfBirthCode", by.y="Code", all.x=TRUE)
+summary(CPS)
+sort(table(CPS$Country))
+```
+
+
+###Problem 4.3 - Integrating Country of Birth Data
+
+What proportion of the interviewees from the "New York-Northern New Jersey-Long Island, NY-NJ-PA" metropolitan area have a country of birth that is not the United States? For this computation, don't include people from this metropolitan area who have a missing country of birth.
+
+```{r}
+CPSDT <- data.table(CPS)
+CPSDT
+CPSDT[MetroArea == "New York-Northern New Jersey-Long Island, NY-NJ-PA", .N, .(Country)][,.(Country, 1-(N/sum(N)))] #wanted to do it in one line, although this is really, really inelegant
+```
+
+
+Which metropolitan area has the largest number (note -- not proportion) of interviewees with a country of birth in India? Hint -- remember to include na.rm=TRUE if you are using tapply() to answer this question.
+
+In Brazil?
+
+In Somalia?
+
+```{r}
+CPSDT[Country == "India", .N, MetroArea][order(N)]
+CPSDT[Country == "Brazil", .N, MetroArea][order(N)]
+CPSDT[Country == "Somalia", .N, MetroArea][order(N)]
+```
+
