--- a/W4/Homework_w4.rmd
+++ b/W4/Homework_w4.rmd
@@ -370,35 +370,360 @@ table(testLetters$isB, forestPredictB)
 (374+1165)/length(testLetters$isB)
 ```
 
-
 In lecture, we noted that random forests tends to improve on CART in terms of predictive accuracy. Sometimes, this improvement can be quite significant, as it is here.
 
 
+
+## Problem 2.1 - Predicting the letters A, B, P, R
+
+Let us now move on to the problem that we were originally interested in, which is to predict whether or not a letter is one of the four letters A, B, P or R.
+
+As we saw in the D2Hawkeye lecture, building a multiclass classification CART model in R is no harder than building the models for binary classification problems. Fortunately, building a random forest model is just as easy.
+
+The variable in our data frame which we will be trying to predict is "letter". Start by converting letter in the original data set (letters) to a factor by running the following command in R:
+
 ```{r}
+letters$letter = as.factor( letters$letter )
+```
+
+Now, generate new training and testing sets of the letters data frame using letters$letter as the first input to the sample.split function. Before splitting, set your seed to 2000. Again put 50% of the data in the training set. (Why do we need to split the data again? Remember that sample.split balances the outcome variable in the training and testing sets. With a new outcome variable, we want to re-generate our split.)
+
+In a multiclass classification problem, a simple baseline model is to predict the most frequent class of all of the options.
+
+What is the baseline accuracy on the testing set?
+
+```{r}
+set.seed(2000)
+samplingLetters <- sample.split(letters$letter, SplitRatio = 0.5)
+trainAllLetters <- subset(letters, samplingLetters == T)
+testAllLetters <- subset(letters, samplingLetters == F)
+
+table(testAllLetters$letter)
+401/nrow(testAllLetters)
 
 ```
 
+
+Problem 2.2 - Predicting the letters A, B, P, R
+
+Now build a classification tree to predict "letter", using the training set to build your model. You should use all of the other variables as independent variables, except "isB", since it is related to what we are trying to predict! Just use the default parameters in your CART model. Add the argument method="class" since this is a classification problem. Even though we have multiple classes here, nothing changes in how we build the model from the binary case.
+
+What is the test set accuracy of your CART model? Use the argument type="class" when making predictions.
+
+(HINT: When you are computing the test set accuracy using the confusion matrix, you want to add everything on the main diagonal and divide by the total number of observations in the test set, which can be computed with nrow(test), where test is the name of your test set).
+
+
 ```{r}
+letterCart <- rpart(letter ~ . -isB, data = trainAllLetters, method = "class")
+letterPred <-  predict(letterCart, newdata = testAllLetters, type = "class")
+table(letterPred)
+
+#sums the correct quesses via the diagonal and divides by all
+sum(diag(table(testAllLetters$letter, letterPred)))/sum(table(testAllLetters$letter, letterPred))
 
 ```
 
+
+
+## Problem 2.3 - Predicting the letters A, B, P, R
+
+Now build a random forest model on the training data, using the same independent variables as in the previous problem -- again, don't forget to remove the isB variable. Just use the default parameter values for ntree and nodesize (you don't need to include these arguments at all). Set the seed to 1000 right before building your model. (Remember that you might get a slightly different result even if you set the random seed.)
+
+What is the test set accuracy of your random forest model?
+
+
 ```{r}
+set.seed(1000)
+require(randomForest)
+letterForest = randomForest(letter ~ . - isB, data = trainAllLetters)
+forestPredict = predict(letterForest, newdata = testAllLetters)
+
+
+sum(diag(table(forestPredict, testAllLetters$letter)))/sum(table(forestPredict, testAllLetters$letter))
 
 ```
 
+You should find this value rather striking, for several reasons. The first is that it is significantly higher than the value for CART, highlighting the gain in accuracy that is possible from using random forest models. The second is that while the accuracy of CART decreased significantly as we transitioned from the problem of predicting B/not B (a relatively simple problem) to the problem of predicting the four letters (certainly a harder problem), the accuracy of the random forest model decreased by a tiny amount.
+
+
+
+
+
+# Predicting Earnings from census data
+
+The United States government periodically collects demographic information by conducting a census.
+
+In this problem, we are going to use census information about an individual to predict how much a person earns -- in particular, whether the person earns more than $50,000 per year. This data comes from the UCI Machine Learning Repository.
+
+The file census.csv contains 1994 census data for 31,978 individuals in the United States.
+
+The dataset includes the following 13 variables:
+
+age = the age of the individual in years
+workclass = the classification of the individual's working status (does the person work for the federal government, work for the local government, work without pay, and so on)
+education = the level of education of the individual (e.g., 5th-6th grade, high school graduate, PhD, so on)
+maritalstatus = the marital status of the individual
+occupation = the type of work the individual does (e.g., administrative/clerical work, farming/fishing, sales and so on)
+relationship = relationship of individual to his/her household
+race = the individual's race
+sex = the individual's sex
+capitalgain = the capital gains of the individual in 1994 (from selling an asset such as a stock or bond for more than the original purchase price)
+capitalloss = the capital losses of the individual in 1994 (from selling an asset such as a stock or bond for less than the original purchase price)
+hoursperweek = the number of hours the individual works per week
+nativecountry = the native country of the individual
+over50k = whether or not the individual earned more than $50,000 in 1994
+
+
+
+
+## Problem 1.1 - A Logistic Regression Model
+
+Let's begin by building a logistic regression model to predict whether an individual's earnings are above $50,000 (the variable "over50k") using all of the other variables as independent variables. First, read the dataset census.csv into R.
+
 ```{r}
+census <-  read.csv("census.csv")
+```
+
+Then, split the data randomly into a training set and a testing set, setting the seed to 2000 before creating the split. Split the data so that the training set contains 60% of the observations, while the testing set contains 40% of the observations.
+
+```{r}
+require(caTools)
+set.seed(2000)
+censusSplit <- sample.split(census$over50k, 0.6)
+censusTrain <- subset(census, censusSplit == T)
+censusTest <- subset(census, censusSplit == F)
 
 ```
 
+
+Next, build a logistic regression model to predict the dependent variable "over50k", using all of the other variables in the dataset as independent variables. Use the training set to build the model.
+
+Which variables are significant, or have factors that are significant? (Use 0.1 as your significance threshold, so variables with a period or dot in the stars column should be counted too. You might see a warning message here - you can ignore it and proceed. This message is a warning that we might be overfitting our model to the training set.) Select all that apply.
+
+
 ```{r}
+logOver50k <- glm(over50k ~ . ,data=censusTrain, family = binomial)
+summary(logOver50k)
+```
+
+## Problem 1.2 - A Logistic Regression Model
+
+What is the accuracy of the model on the testing set? Use a threshold of 0.5. (You might see a warning message when you make predictions on the test set - you can safely ignore it.)
+
+```{r}
+logCensusPred <- predict(logOver50k, newdata = censusTest, type = "response")
+
+
+table(censusTest$over50k, logCensusPred >= 0.5)
+(9051+1888)/(9051+1888+1190+662)
+```
+
+## Problem 1.3 - A Logistic Regression Model
+
+What is the baseline accuracy for the testing set?
+
+```{r}
+table(censusTest$over50k)
+9713/(9713+3078)
+```
+
+## Problem 2.1 - A CART Model
+
+We have just seen how the logistic regression model for this data achieves a high accuracy. Moreover, the significances of the variables give us a way to gauge which variables are relevant for this prediction task. However, it is not immediately clear which variables are more important than the others, especially due to the large number of factor variables in this problem.
+
+Let us now build a classification tree to predict "over50k". Use the training set to build the model, and all of the other variables as independent variables. Use the default parameters, so don't set a value for minbucket or cp. Remember to specify method="class" as an argument to rpart, since this is a classification problem. After you are done building the model, plot the resulting tree.
+
+How many splits does the tree have in total?
+
+```{r}
+require(rpart)
+require(rpart.plot)
+require(rattle)
+
+
+censusCart <- rpart(over50k ~ ., data = censusTrain, method = "class" )
+prp(censusCart)
+fancyRpartPlot(censusCart, tweak = 3)
+plot(censusCart)
+text(censusCart)
+```
+
+
+## Problem 2.2 - A CART Model
+Which variable does the tree split on at the first level (the very first split of the tree)?
+
+a: relationship
+
+
+## Problem 2.3 - A CART Model
+
+Which variables does the tree split on at the second level (immediately after the 
+first split of the tree)? Select all that apply.
+
+a: education & capitalgain
+
+
+## Problem 2.4 - A CART Model
+
+What is the accuracy of the model on the testing set? Use a threshold of 0.5. (You can either add the argument type="class", or generate probabilities and use a threshold of 0.5 like in logistic regression.)
+
+
+```{r}
+predCensusCart <- predict(censusCart, newdata = censusTest, type = "class")
+table(censusTest$over50k, predCensusCart)
+(9243+1596)/(9243+1596+470+1482)
+```
+
+
+##Problem 2.5 - A CART Model
+
+Let us now consider the ROC curve and AUC for the CART model on the test set. You will need to get predicted probabilities for the observations in the test set to build the ROC curve and compute the AUC. Remember that you can do this by removing the type="class" argument when making predictions, and taking the second column of the resulting object.
+
+Plot the ROC curve for the CART model you have estimated. Observe that compared to the logistic regression ROC curve, the CART ROC curve is less smooth than the logistic regression ROC curve. Which of the following explanations for this behavior is most correct? (HINT: Think about what the ROC curve is plotting and what changing the threshold does.)
+
+```{r}
+require(ROCR)
+predCensusCartProb <- predict(censusCart, newdata = censusTest)
+predCensusCartProb
+ROCRCart = prediction(predCensusCartProb[,2], censusTest$over50k)
+ROCRlog = prediction(logCensusPred, censusTest$over50k)
+ROCRCart
+
+
+
+
+
+ROCRperf = performance(ROCRCart, "tpr", "fpr")
+logPerf = performance(ROCRlog, "tpr", "fpr")
+plot(ROCRperf, colorize = T)
+plot(logPerf, colorize = T, add = T)
+```
+
+
+##Problem 2.6 - A CART Model
+
+What is the AUC of the CART model on the test set?
+
+```{r}
+as.numeric(performance(ROCRCart, "auc")@y.values)
 
 ```
 
+
+## Problem 3.1 - A Random Forest Model
+
+Before building a random forest model, we'll down-sample our training set. While some modern personal computers can build a random forest model on the entire training set, others might run out of memory when trying to train the model since random forests is much more computationally intensive than CART or Logistic Regression. For this reason, before continuing we will define a new training set to be used when building our random forest model, that contains 2000 randomly selected obervations from the original training set. Do this by running the following commands in your R console (assuming your training set is called "train"):
+
+
 ```{r}
+set.seed(1)
+
+trainSmall = censusTrain[sample(nrow(censusTrain), 2000), ]
+```
+
+
+
+Let us now build a random forest model to predict "over50k", using the dataset "trainSmall" as the data used to build the model. Set the seed to 1 again right before building the model, and use all of the other variables in the dataset as independent variables. (If you get an error that random forest "can not handle categorical predictors with more than 32 categories", re-build the model without the nativecountry variable as one of the independent variables.)
+
+```{r}
+require(randomForest)
+set.seed(1)
+
+censusForest <- randomForest(over50k ~ . , data=trainSmall)
+
+bigRndFrst <- randomForest(over50k ~ . , data=censusTrain)
 
 ```
 
+
+Then, make predictions using this model on the entire test set. What is the accuracy of the model on the test set, using a threshold of 0.5? (Remember that you don't need a "type" argument when making predictions with a random forest model if you want to use a threshold of 0.5. Also, note that your accuracy might be different from the one reported here, since random forest models can still differ depending on your operating system, even when the random seed is set. )
+
 ```{r}
+censusForest$predicted
+predictForest <- predict(censusForest, censusTest)
+table(censusTest$over50k, predictForest)
+(9586+1093)/(9586+1093+1985+127)
 
 ```
 
+
+## Problem 3.2 - A Random Forest Model
+
+As we discussed in lecture, random forest models work by building a large collection of trees. As a result, we lose some of the interpretability that comes with CART in terms of seeing how predictions are made and which variables are important. However, we can still compute metrics that give us insight into which variables are important.
+
+One metric that we can look at is the number of times, aggregated over all of the trees in the random forest model, that a certain variable is selected for a split. To view this metric, run the following lines of R code (replace "MODEL" with the name of your random forest model):
+```{r}
+vu = varUsed(censusForest, count=TRUE)
+
+vusorted = sort(vu, decreasing = FALSE, index.return = TRUE)
+
+dotchart(vusorted$x, names(censusForest$forest$xlevels[vusorted$ix]))
+```
+
+
+This code produces a chart that for each variable measures the number of times that variable was selected for splitting (the value on the x-axis). Which of the following variables is the most important in terms of the number of splits?
+
+
+## Problem 3.3 - A Random Forest Model
+
+A different metric we can look at is related to "impurity", which measures how homogenous each bucket or leaf of the tree is. In each tree in the forest, whenever we select a variable and perform a split, the impurity is decreased. Therefore, one way to measure the importance of a variable is to average the reduction in impurity, taken over all the times that variable is selected for splitting in all of the trees in the forest. To compute this metric, run the following command in R (replace "MODEL" with the name of your random forest model):
+
+
+```{r}
+varImpPlot(censusForest)
+```
+
+Which one of the following variables is the most important in terms of mean reduction in impurity?
+
+
+##Problem 4.1 - Selecting cp by Cross-Validation
+
+We now conclude our study of this data set by looking at how CART behaves with different choices of its parameters.
+
+Let us select the cp parameter for our CART model using k-fold cross validation, with k = 10 folds. Do this by using the train function. Set the seed beforehand to 2. Test cp values from 0.002 to 0.1 in 0.002 increments, by using the following command:
+
+```{r}
+set.seed(2)
+cartGrid = expand.grid( .cp = seq(0.002,0.1,0.002))
+fitControl = trainControl(method = "cv", number = 10)
+
+```
+
+
+Also, remember to use the entire training set "train" when building this model. The train function might take some time to run.
+
+Which value of cp does the train function recommend?
+
+```{r}
+require(caret)
+require(e1071)
+
+train(over50k ~., data = censusTrain, method = "rpart", trControl = fitControl, tuneGrid = cartGrid )
+```
+
+
+
+
+## Problem 4.2 - Selecting cp by Cross-Validation
+
+Fit a CART model to the training data using this value of cp. What is the prediction accuracy on the test set?
+
+```{r}
+censusCartCP <- rpart(over50k ~ ., data = censusTrain, method = "class", cp = 0.002)
+predCensusCartCP <- predict(censusCartCP, newdata = censusTest, type = "class")
+table(censusTest$over50k, predCensusCartCP)
+(9178+1838)/(9178+1838+1240+535)
+```
+
+
+## Problem 4.3 - Selecting cp by Cross-Validation
+
+Compared to the original accuracy using the default value of cp, this new CART model is an improvement, and so we should clearly favor this new model over the old one -- or should we? Plot the CART tree for this model. How many splits are there?
+
+```{r}
+prp(censusCartCP)
+
+```
+
+
+This highlights one important tradeoff in building predictive models. By tuning cp, we improved our accuracy by over 1%, but our tree became significantly more complicated. In some applications, such an improvement in accuracy would be worth the loss in interpretability. In others, we may prefer a less accurate model that is simpler to understand and describe over a more accurate -- but more complicated -- model.
